--- a/task1/readexcel/templates/index.html
+++ b/task1/readexcel/templates/index.html
@@ -18,6 +18,8 @@
         <br>
         <input type="submit" value="Read">
     </form>
+
+    <a href="http://5a96da6452b9.ngrok.io/analysisreadXLSheader">Task3</a>
     
 </body>
 </html>
